# VS22-Boost-Asio-Server-Rewritten-In-Rust

client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: lib.rs
