[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.21.0", features = ["full"] }
tokio-tungstenite = "0.17.2"
url = "2.3.1"
futures-channel = "0.3.24"
futures-util = "0.3.17"