[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
poem = { version = "1.3.40", features = ["websocket"] }
tokio = { version = "1.21.0", features = ["full"] }
tokio-util = "0.7.3"
parking_lot = "0.12.1"
futures-util = "0.3.17"
tracing-subscriber = { version ="0.3.9", features = ["env-filter"] }